Page MenuHome GnuPG

Can't insert charaters in a magic-wand generated password
Closed, ResolvedPublic

Description

A user reported that when changing the Pinentry suggested Passwort, inserted characters are always added to the end. Needs to be verified and fixed.

Test using gpg -c with "formatted-passphrase" enabled in gpg-agent.conf

Related Objects

Event Timeline

werner triaged this task as Normal priority.May 11 2022, 5:18 PM
werner created this task.
werner created this object with edit policy "Contributor (Project)".

Its an issue of cursor position. If one either deletes or inputs a a character anywhere in the password string, the cursor always jumps to the end of the string.

Therefore it is possible to change a character by first deleting it, then positioning the cursor again at the intended place of insertion and there type the new character.

If pinentry-formatted-passphrase is removed from gpg-agent.conf, the cursor jumping does not happen any more.

ikloecker changed the task status from Open to Testing.May 12 2022, 4:08 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
ikloecker added a subscriber: ikloecker.

Editing a formatted password should work now as expected.

ebo claimed this task.

works now

ebo removed a project: Restricted Project.Sep 14 2022, 1:15 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:52 PM