qt: Update the cursor position when reformatting the text

* qt/pinlineedit.cpp (PinLineEdit::textEdited): Update cursor position
after reformatting the text.
--

This fixes the problem that the cursor jumped to the end of the text
whenever the text was edited.

GnuPG-bug-id: 5972